--- a/src/components/Keyboard/Keys/keys.css
+++ b/src/components/Keyboard/Keys/keys.css
@@ -1,4 +1,5 @@
 .keys-container{
   display: flex;
   flex: 1;
+  position: relative;
 }
